# MonteCarloRayTracer

./: .gitignore  README.md
raytracer/: CMakeLists.txt  main.cpp
raytracer.xcodeproj/: project.pbxproj
raytracer.xcodeproj/project.xcworkspace/xcuserdata/evelynbankell.xcuserdatad/: UserInterfaceState.xcuserstate
raytracer/glm/: geometric.hpp
raytracer/glm/detail/: func_geometric.inl
raytracer/headers/: Camera.h  ColorDbl.h  Definitions.h  Direction.h  Light.h  Pixel.h  Ray.h  Scene.h  Sphere.h  Tetrahedron.h  Triangle.h  Vertex.h
raytracer/src/: Camera.cpp  ColorDbl.cpp  Direction.cpp  Light.cpp  Pixel.cpp  Ray.cpp  Scene.cpp  Triangle.cpp  Vertex.cpp  main.cpp
